# gympy

./: LICENCE  README.md  pyproject.toml
docs/examples/RNN/: 1-LSTM_basic.ipynb  1-Rnn_basic copy.ipynb  1-Rnn_basic.ipynb
docs/examples/autograd/: 01-autograd.ipynb  2-autograd.ipynb
docs/examples/layers/: 01-Layers.ipynb  02-Neural_network_basic_model.ipynb  02a-Neural_network_regression.ipynb  03-classifications copy.ipynb  03-classifications.ipynb  04-digits.ipynb  04-digits_dataset.ipynb  04a-digits.ipynb  04b-digits_dataset.ipynb  04c-digits_dataset_momentum.ipynb  04d-digits_dataset_RMSprop.ipynb  04e-digits_dataset_Adam.ipynb
docs/examples/makemore/: build_makemore.ipynb  build_makemore_bigram.ipynb
docs/examples/micrograd/: 02-neurons.ipynb  03-layers.ipynb  04-nn.ipynb  05-gradient_descent.ipynb
gympy/autograd/: __init__.py  micrograd.py  nn.py
gympy/functions/: functions.py
gympy/layers/: __init__.py  functions.py  layers.py  rlayers.py
gympy/loss/: __init__.py  loss.py
gympy/networks/: __init__.py  networks.py
gympy/optimizers/: __init__.py  optimizers.py
