[tool.poetry]
name = "gympy"
version = "0.1.0"
description = "Machine Learning Library just for practice"
authors = ["scuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
pandas = "^1.3.1"
scipy = "^1.6.1"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
pydantic = "^1.8.2"
rich = "^10.6.0"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
